SAK-13453 remove finalize(); review and clean up error handling
git-svn-id: https://source.sakaiproject.org/svn/calendar/trunk@46306 66ffb92e-73f9-0310-93c1-f5514f145a0a